# ski-resorts

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  load-resorts.yml
backend/: alembic.ini  app.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260328-0a383566fc09-initial_resorts_table.py
backend/scripts/: load_resorts.py
backend/skiresorts/: db.py  models.py  settings.py
backend/skiresorts/api/: base.py  graphql.py
backend/skiresorts/data/: resorts.json
backend/skiresorts/services/: data_loader.py  resorts.py  scoring.py  weather.py
backend/tests/: conftest.py  test_app.py  test_data_loader.py  test_db.py  test_graphql.py  test_models.py  test_resort_entity.py  test_resorts.py  test_scoring.py  test_weather.py
docs/superpowers/plans/: 2026-03-28-openskimap-integration.md  2026-03-28-ski-resort-finder.md
docs/superpowers/specs/: 2026-03-28-ski-resort-finder-design.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CitySearch.test.tsx  CitySearch.tsx  FilterPanel.test.tsx  FilterPanel.tsx  FilterToggleButton.test.tsx  FilterToggleButton.tsx  LoadingScreen.test.tsx  LoadingScreen.tsx  Map.tsx  MapControls.test.tsx  MapControls.tsx  RadiusControl.test.tsx  RadiusControl.tsx  ResortCard.test.tsx  ResortCard.tsx  ResortCardCarousel.test.tsx  ResortCardCarousel.tsx  ResortPopup.test.tsx  ResortPopup.tsx
frontend/src/components/filters/: ConditionChips.test.tsx  ConditionChips.tsx  DualRangeSlider.test.tsx  DualRangeSlider.tsx  FilterSection.test.tsx  FilterSection.tsx  MultiSelectDropdown.test.tsx  MultiSelectDropdown.tsx  RangeSlider.test.tsx  RangeSlider.tsx  Toggle.test.tsx  Toggle.tsx
frontend/src/hooks/: useDebouncedValue.test.ts  useDebouncedValue.ts  useFilteredResorts.test.ts  useFilteredResorts.ts  useFilters.test.ts  useFilters.ts  useGeolocation.test.ts  useGeolocation.ts  useResorts.test.ts  useResorts.ts
frontend/src/lib/: graphql.test.ts  graphql.ts
frontend/src/styles/: globals.css
frontend/src/types/: city.ts  filters.ts  resort.test.ts  resort.ts
